test/compile-fail/resolution/multiple-definition-struct/expected.txt
error: the name `b` is defined multiple times
 --> top.rhdl:7:7
  |
3 | struct b {}
  |        - previous definition of the type `b` here
7 | struct b {}
  |        ^ `b` redefined here
